--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -1,14 +1,7 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Body:</strong>
-  <%= @message.body %>
-</p>
+<%= render 'form' %>
 
-<p>
-  <strong>User:</strong>
-  <%= @message.user.name %>
-</p>
 
-<%= link_to 'Edit', edit_message_path(@message) %> |
 <%= link_to 'Back', messages_path %>
+
